--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
-html{
-    font-size:100%;
+html {
+    font-size: 100%;
+}
+
+html::before{
+    content: "";
+    background-image: url('img_assets/bg.jpg');
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 50%;
+    min-height: 100%;
 }
 
 main{
@@ -9,9 +22,13 @@ main{
 }
 
 body{
-	background-color: #000;
+    margin: 0;
+    background-color: #000;
+    /*
+    background: #000 center url("img_assets/bg.jpg") repeat;
+    
 	transition: background-color .5s;
-    background-image: ;
+    background-image: linear-gradient(#800000, pink);*/
 }
 
 div{
@@ -29,6 +46,7 @@ div{
     font-family: arial black, sans-serif;
     margin-top: 0;
     margin-bottom: 5px;
+    position:relative;
 }
   
 #handle{
@@ -36,12 +54,16 @@ div{
     font-family: arial black, sans-serif;
     margin: 0;
     font-size: 2vw;
+    position:relative;
+    z-index: 2;
 }
 
 #end-card{
     text-align: center;
     font-family: arial black, sans-serif;
     font-size: 1vw;
+    color: #fff;
+    position:relative;
 }
 
 #end-heart{
@@ -49,6 +71,7 @@ div{
     font-family: arial black, sans-serif;
     color: red;
     font-size: 1vw;
+    position:relative;
 }
 
 .header-img{
@@ -58,17 +81,15 @@ div{
     display:block;
     margin-left: auto;
     margin-right: auto;
-}
-
-#bg-img{
-    opacity: 50%;
+    margin-top:2vh;
+    position:relative;
 }
 
 
 /* Link buttons */
 
 .button{
-    background-color: #2f2f2f; /* <-- gray */                       /*#f44336;  Red */
+    background-color: #8b0000; /* 2f2f2f gray */                       /*#f44336;  Red */
     border: none;
     border-radius: 12px;
     color: #fff;
@@ -86,7 +107,7 @@ div{
 }
 
 .button:hover {
-    background-color: #4f4f4f;                                   /*#8b0000;  Maroon */
+    background-color: #b30000;         /*4f4f4f light gray*/                          /*#8b0000;  Maroon */
     color: white;
   }
 
