--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ li{
         border-radius: 5px;
         padding:5% 20%;
         width: 50%;
+        font-weight: bold;
     }
     
     #end-card{
