--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 html {
     font-size: 100%;
+    height: 100vh;
+    min-height: 100vh;
 }
 
 html::before{
     content: "";
     background-image: url('img_assets/bg.jpg');
+    background-repeat: repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     position: absolute;
     top: 0px;
@@ -13,6 +19,7 @@ html::before{
     left: 0px;
     opacity: 50%;
     min-height: 100%;
+    height: 100vh;
 }
 
 main{
@@ -34,6 +41,10 @@ body{
 div{
     flex-basis: 100%;
     margin-bottom: .5rem;
+}
+
+.content{
+    min-height: 100vh;
 }
 
 * { color:#fff; text-decoration: none;}
@@ -98,17 +109,17 @@ div{
     text-decoration: none;
     display: inline-block;
     font-size: 1.2vw;
-    margin: 4px 2px
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    margin: 4px 2px;
     transition-duration: 0.4s;
     font-family: arial black, sans-serif;
     width: 50%;
+    -webkit-transition-duration: 0.4s; /* Safari */
 }
 
 .button:hover {
     background-color: #b30000;         /*4f4f4f light gray*/                          /*#8b0000;  Maroon */
     color: white;
+    transform: scale(1.05);
   }
 
 div.container{
@@ -148,6 +159,11 @@ li{
 .socials img{
     width: 3%;
     padding: 3px;
+    transition: .3s;
+}
+
+.socials img:hover{
+    transform: scale(1.1);
 }
 
   /* End Socials*/
