--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     font-size: 100%;
     height: 100vh;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 html::before{
@@ -18,7 +18,7 @@ html::before{
     left: 0px;
     opacity: 50%;
     min-height: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 main{
@@ -41,13 +41,10 @@ div{
     flex-basis: 100%;
     margin-bottom: .5rem;
 }
-
-.content{
-    min-height: 100vh;
-}
+  
 
 * { color:#fff; text-decoration: none;}
-  
+
 #header{
 	font-size: 25px; /* 25px */
 	text-align: center;
