--- a/style.css
+++ b/style.css
@@ -1,24 +1,9 @@
 html {
     font-size: 100%;
     height: 100vh;
-    /* min-height: 100vh; */
-}
-
-html::before{
-    content: "";
     background-image: url('img_assets/bg.jpg');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 50%;
-    min-height: 100%;
-    height: 100%;
+    /* min-height: 100vh; */
 }
 
 main{
@@ -29,7 +14,7 @@ main{
 
 body{
     margin: 0;
-    background-color: #000;
+    /* background-color: #000; */
     /*
     background: #000 center url("img_assets/bg.jpg") repeat;
     
@@ -177,6 +162,9 @@ li{
 }
 
 @media screen and (max-width: 500px){
+    html{
+        background-size: 100%100%;
+    }
     .header-img{
         width: 30%;
     }
